@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project version="4">
-  <component name="ProjectRootManager" version="2" project-jdk-name="Perl 6 v2020.06.6.gf.470.b.544.d" project-jdk-type="Perl 6 SDK" />
+  <component name="ProjectRootManager" version="2" project-jdk-name="Raku v2020.10.130.g.78.b.03.b.626" project-jdk-type="Raku SDK" />
 </project>
